...
                android:padding="@dimen/padding_10"
                android:text="@string/Comics"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Red_FireBrick" />

            <android.support.v4.view.ViewPager
                android:id="@+id/gallery1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_196"
                android:visibility="visible" />

        </LinearLayout>

...
